# cdr

./: README.md  pyproject.toml
src/cdr/: fiducial.py  io.py
tests/: conftest.py  test_io.py  test_pmesh.py
